# satark-proto

./: .env.example  .gitignore  Makefile  README.md  diagnose_satark.py  diagnostic_results.json  docker-compose.dev.yml  docker-compose.prototype.yml  validate_graph.py
apps/api/: Dockerfile  Dockerfile.prototype  pyproject.toml  requirements.prototype.txt
apps/api/src/: inspect_nodes.py  main.py  main_prototype.py  migrate_and_link.py
apps/api/src/api/v1/: __init__.py  findings.py  findings_routes.py  graph.py  graph_routes.py  health.py  health_routes.py  ingestion.py  ingestion_routes.py  review.py  review_routes.py  tenants.py
apps/api/src/components/: component3_tool_lookup.py  component8_registry.py
apps/api/src/core/: config.py
apps/api/src/core/auth/: __init__.py  jwt.py
apps/api/src/core/components/: component3_tool_lookup.py  pre_ingestion_scanner.py
apps/api/src/core/database/: __init__.py  neo4j.py  postgres.py  redis_client.py
apps/api/src/core/gkg/: loader.py
apps/api/src/core/llm/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  factory.py
apps/api/src/core/middleware/: __init__.py  logging.py  tenant.py
apps/api/src/gkg/: models.py
apps/api/src/gkg/fixtures/: alert_signatures.json  compliance_controls.json  sensitive_ports.json  taint_sources.json  vulnerability_classes.json
apps/api/src/models/: entity_id.py  nodes.py  tenants.py
apps/api/src/track1/: neo4j_writer.py
apps/api/src/track1/pass2/: linker.py
apps/api/src/track2/: pipeline.py
apps/api/tests/unit/: test_llm_provider.py
(+32 files in other folders)
